--- a/PersonalPortfolio.html
+++ b/PersonalPortfolio.html
@@ -357,10 +357,11 @@
         }
         .vertical-desc {
           visibility: hidden;
+          /* position: absolute; */
           position: relative;
           top: 0px;
           width: 300px;
-          left: 265px;
+          left: -265px;
           font-weight: bold;
 
         }
