--- a/PersonalPortfolio.html
+++ b/PersonalPortfolio.html
@@ -331,7 +331,9 @@
         .rightSection img {
           width: 300px;
           height: 200px;
-          margin-right: 20px;
+          /* margin-right:; */
+          position: relative;
+          right: 40px;
         }
         .secondSection .vertical {
           background: rgb(6 6 39);
@@ -368,7 +370,7 @@
         .vertical img {
           position: relative;
           left: 130px;
-          top: -15px;
+          top: -10px;
         }
         .vertical-title {
           position: relative;
